--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
-title: 'Ribeirão Preto BitDevs'
-tagline: 'BitDevs é uma comunidade para aqueles interessados em discutir e participar na pesquisa e desenvolvimento do Bitcoin e protocolos relacionados.'
+title: 'Ribeirão Preto Bitdevs'
+tagline: 'Bitdevs é uma comunidade para aqueles interessados em discutir e participar na pesquisa e desenvolvimento do Bitcoin e protocolos relacionados.'
 
 menu:
 
   - {name: 'Eventos', url: '/events'}
-  - {name: 'Meetup', url: 'https://www.meetup.com/clube-bitcoin-ribeirao-preto/events/297781428/', external: true}
+  - {name: 'Meetup', url: 'https://www.meetup.com/clube-bitcoin-ribeirao-preto/events/299528594/', external: true}
